--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -51,10 +51,10 @@
     font-size: .9rem;
     
 
-    &:first-child {
-        background-color: rgba($color-primary, .09);
-        border-left: 4px solid rgba($color-primary, 1);
-    }
+    // &:first-child {
+    //     background-color: rgba($color-primary, .09);
+    //     border-left: 4px solid rgba($color-primary, 1);
+    // }
 
     &:hover {
         background-color: rgba($color-primary, .09);
@@ -72,4 +72,9 @@
 .side-icon {
     margin-right: .7rem;
     font-size: 1.1rem;
+}
+
+.switch-dropdown {
+    margin-left: .4rem;
+    font-size: 1.5rem;
 }
