--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -127,7 +127,6 @@
 
 .user-infos {
     background-color: $color-white;
-    // background-color: red;
     border-radius: .5rem;
     width: 100%;
     min-height: 500px;
@@ -136,6 +135,7 @@
     &-container {
         padding: 1.5rem;
         color: $color-secondary;
+        position: relative;
 
         &-header {
             display: grid;
@@ -157,6 +157,7 @@
     &-icon {
         margin-left: .5rem;
         font-size: 1rem;
+        cursor: pointer;
     }
 }
 
@@ -183,6 +184,7 @@
     text-decoration: none;
 }
 
+
 .page-control {
     margin-top: 1.2rem;
     display: flex;
@@ -190,7 +192,7 @@
     align-items: center;
 }
 
-.list-filter {
+.page-filter {
 
     &-text {
         display: flex;
@@ -234,5 +236,99 @@
         margin: 0 .2rem;
         cursor: pointer;
     }
+}
+
+.users-list-filter {
+    position: absolute;
+    width: 28%;
+    height: 0%;
+    background-color: $color-white;
+    top: 60px;
+    left: 25px;
+    box-shadow: 5px 5px 7px rgba(#000, .02);
+    padding: 0;
+    border-radius: 7px;
+    border: 1px solid $border-color;
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    overflow: hidden;
+    transition: all .2s;
+}
+
+.users-list-filter.active {
+    height: 88%;
+    background-color: $color-white;
+    padding: 2.5rem 1rem;
+    top: 60px;
+    left: 25px;
+    opacity: 1;
+    transition: all .2s;
+}
+
+.filter-label {
+    font-size: .8rem;
+    font-weight: 500;
+    margin-bottom: .5rem;
+    text-transform: initial;
+}
+
+.filter-input {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 5px;
+    border: 1px solid $border-color;
+    padding: 0 1rem;
+    outline: none;
+    color: $color-secondary;
+    margin-bottom: 1.5rem;
+
+    &::placeholder {
+        color: $placeholder-color;
+    }
+
+    &::-webkit-calendar-picker-indicator {
+        opacity: .5;
+    }
+}
+
+.filter-dropdown {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 5px;
+    outline: none;
+    margin-bottom: 1.5rem;
+}
+
+.filter-buttons-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+@mixin btnStyles {
+    height: 2.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7px;
+    font-size: .9rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.filter-button-outline {
+    @include btnStyles();
+    background-color: $color-white;
+    color: $color-secondary;
+    border: 1px solid $color-secondary;
+}
+
+.filter-button-solid {
+    @include btnStyles();
+    background-color: $color-primary;
+    color: $color-white;
+    border: 1px solid $color-primary;
 }
 
