--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -241,7 +241,7 @@
 .users-list-filter {
     position: absolute;
     width: 28%;
-    height: 0%;
+    height: 0;
     background-color: $color-white;
     top: 60px;
     left: 25px;
@@ -252,12 +252,13 @@
     display: flex;
     flex-direction: column;
     opacity: 0;
-    overflow: hidden;
+    // overflow: hidden;
     transition: all .2s;
+    z-index: 20;
 }
 
 .users-list-filter.active {
-    height: 88%;
+    min-height: 650px;
     background-color: $color-white;
     padding: 2.5rem 1rem;
     top: 60px;
