ui changes/ icon changes

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -23,6 +23,10 @@
         margin-right: .7rem;
         font-size: 1.2rem;
     }
+
+    &-text {
+        margin-left: .7rem;
+    }
 }
 
 .side-items-container {
@@ -72,6 +76,10 @@
 .side-icon {
     margin-right: .7rem;
     font-size: 1.1rem;
+}
+
+.side-text {
+    margin-left: .7rem;
 }
 
 .switch-dropdown {
