--- a/src/App.css
+++ b/src/App.css
@@ -2,40 +2,40 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Work Sans', sans-serif;
+  font-family: 'Avenir', sans-serif;
 }
 
 @font-face {
-  font-family: "Helvetica";
-  src: url('./fonts/HelveticaNeueLTPro-Lt.otf') format("opentype");
+  font-family: "Avenir";
+  src: url('./fonts/Avenir/AvenirLight.ttf') format("truetype");
   font-weight: thin;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Helvetica";
-  src: url('./fonts/HelveticaNeueLTPro-Roman.otf') format("opentype");
+  font-family: "Avenir";
+  src: url('./fonts/Avenir/AvenirMedium.ttf') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Helvetica";
-  src: url('./fonts/HelveticaNeueLTPro-Md.otf') format("opentype");
-  font-weight: medium;
+  font-family: "Avenir";
+  src: url('./fonts/Avenir/AvenirMedium.ttf') format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Helvetica";
-  src: url('./fonts/HelveticaNeueLTPro-Bd.otf') format("opentype");
-  font-weight: bold;
+  font-family: "Avenir";
+  src: url('./fonts/Avenir/AvenirSemiBold.ttf') format("truetype");
+  font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Helvetica";
-  src: url('./fonts/HelveticaNeueLTPro-Blk.otf') format("opentype");
-  font-weight: 800;
+  font-family: "Avenir";
+  src: url('./fonts/Avenir/AvenirBold.ttf') format("truetype");
+  font-weight: 700;
   font-style: normal;
 }
