ui functionality changes

--- a/src/components/Status/Status.scss
+++ b/src/components/Status/Status.scss
@@ -63,6 +63,6 @@
 .status-container {
     display: flex;
     align-items: center;
-    position: relative;
+    justify-content: space-between;
 }
 
