--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -169,10 +169,10 @@
     border-bottom: 1px solid #e9ecf2;
     align-items: center;
 
-    &:hover {
-        background-color: rgba($color-primary, .04);
-        // cursor: pointer;
-    }
+    // &:hover {
+    //     background-color: rgba($color-primary, .04);
+    //     // cursor: pointer;
+    // }
 }
 
 .user-info {
