--- a/src/components/UserMenu/UserMenu.scss
+++ b/src/components/UserMenu/UserMenu.scss
@@ -5,17 +5,33 @@
     cursor: pointer;
 }
 
+.status-menu-container {
+    position: relative;
+}
+
 .status-dropdown {
     background-color: $color-white;
     color: $color-secondary;
-    padding: 1rem;
+    padding: 0;
     font-size: .8rem;
     position: absolute;
-    width: 140px;
+    width: 0;
+    height: 0;
+    opacity: 0;
     top: 0;
     right: 20px;
-    z-index: 20;
+    // z-index: 20;
+    overflow: hidden;
     box-shadow: 3px 3px 5px rgba(#000, .02);
+    transition: all .2s;
+
+    &.active {   
+        padding: 1rem;
+        height: max-content;
+        width: 140px;
+        opacity: 1;
+        transition: all .2s;
+    }
 
     &-status {
         list-style-type: none;
@@ -31,4 +47,19 @@
 
 .status-icon {
     margin-right: .3rem;
+}
+
+.status-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 20;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 1px 2px;
+}
+
+.status-profile-link {
+    text-decoration: none;
+    color: $color-secondary;
 }
