--- a/src/components/Signin/Signin.scss
+++ b/src/components/Signin/Signin.scss
@@ -1,106 +1,115 @@
-@import '../variables';
-
-.signin {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    min-height: 100vh;
-    // height: 700px;
-
-    @media screen and (max-width: 1200px) {
-        grid-template-columns: 1fr;
+.container {
+    display: flex;
+    justify-content: center;
+    align-self: center;
     }
-}
-
-.homepage-art {
-    padding: 2rem 5rem;
-
-    @media screen and (max-width: 1200px) {
-        padding: 2rem 0;
+    
+    .form-content{
+    display: flex;
+    flex-direction: column;
+     margin: 10px;
+    padding: 100px;
+    height: 60vh;
+    margin-left: 90px;
+    background: #fff;
+    box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+    align-self: center;
+    justify-content: center;
+    }
+    header{
+    color: #213F7D;
+    width: 183px;
+    height: 55px;
+    left: 836px;
+    top: 215px;
+    font-family: 'Avenir Next';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 55px;
+    /* identical to box height */
+    letter-spacing: -0.04em;
+    color: #213F7D;
+    }
+    .h_p{
+        color: #545F7D;
+    box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+    padding: 10px;
+    }
+    .logo{
+        width: 150px;
+        height: 10vh;
+        // margin-top: "30px";
+        // height: "10px";
+    }
+    .pablo_container{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: space-between;
+        width: 40%;
+        margin: 20px;
+        // margin-bottom: 80px;
     }
-}
-
-.artwork-img-cont {
-    margin-top: 8rem;
-
-    @media screen and (max-width: 1200px) {
-        margin-top: 3rem;
+    .pablo{
+    width: 500px;
+    height: 337.57px;
+    bottom: 700px;
+    margin-bottom: 100px;
     }
-}
-
-.artwork-img {
-    height: 300px;
-
-    @media screen and (max-width: 1200px) {
-        height: 200px;
-    }
-}
-
-.homepage-signin {
-    padding: 0 7rem;
-    color: $color-secondary;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    @media screen and (max-width: 1300px) {
-        padding: 0 3rem;
-    }
-}
-
-.signin-container {
-    max-width: 500px;
-}
-
-.welcome {
-    margin-bottom: .5rem;
-}
-
-.welcome, .enter-details {
-    @media screen and (max-width: 1200px) {
-        text-align: center;
-    }
-}
-
-.signin-form {
-    padding-top: 3rem;
-}
-
-.signin-input {
-    width: 100%;
-    height: 50px;
-    padding: 0 1rem;
-    border: 1px solid $border-color;
-    border-radius: 7px;
+    input{
+    width: 300px;
+    height: 30px;
     outline: none;
-
-    &:first-child {
-        margin-bottom: 1rem;
+    background: #FFFFFF;
+    border: 2px solid rgba(84, 95, 125, 0.15);
+    border-radius: 5px;
+    margin-bottom: 20px;
     }
-
-    // &::placeholder {
-    //     // color: $border-color;
-    // }
-}
-
-.forgot {
-    font-size: .9rem;
+    .forgotpassword{
+    width: 147px;
+    height: 17px;
+    left: 836px;
+    top: 516px;
+    font-family: 'Avenir Next';
+    font-style: normal;
     font-weight: 600;
-    color: $color-primary;
-    margin: 1.5rem 0;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: right;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
-}
-
-.signin-btn {
-    width: 100%;
-    padding: 1rem 0;
-    background-color: $color-primary;
-    color: $color-white;
-    font-size: 1rem;
-    border-radius: 7px;
+    color: #39CDCC;
+    }
+    button{
     border: none;
-    margin-top: 1rem;
-    cursor: pointer;
-}
+    padding: 15px;
+    width: 300px;
+    background: #39CDCC;
+    border-radius: 8px;
+    color: #FFFFFF;
+    }
+    .h_p{
+        color: #545F7D;
+    box-shadow: 0px 15px 90px rgba(0, 0, 0, 0.03);
+    }
+@media only screen and (max-width: 1000px){
+    .container{
+      flex-direction: column;
+      justify-items: center;
+      align-items: center;
+      overflow-x: hidden;
+    }
+    .pablo_container{
+      width: 20%;
+      justify-items: center;
+      align-items: center;
+    }
+    .form-content{
+      display: flex;
+      flex-direction: column;
+      height: 60vh;
+      justify-items: center;
+      align-self: center;
+      margin-left: 0;
+    }
+  }
